<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.carflip.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_loan"
        android:name="com.example.carflip.ui.loanpage.Loan_Page_Fragment"
        android:label="@string/loan"
        tools:layout="@layout/fragment_loan_page" />

    <fragment
        android:id="@+id/navigation_buy"
        android:name="com.example.carflip.ui.buycarpage.BuycarsFragment"
        android:label="@string/buy"
        tools:layout="@layout/fragment_buycars">
        <action
            android:id="@+id/action_buycarsFragment_to_profileFragment"
            app:destination="@+id/navigation_profile" />
    </fragment>


    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.carflip.ui.profilepage.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />


</navigation>