<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8672E7">

    <TextView
        android:id="@+id/sell_your_car_hassle_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alata"
        android:text="@string/sell_your_car_hassle_free"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Description3"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/Description3"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sell_your_car_hassle_free"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/onba_car_img_3"
        android:layout_width="386dp"
        android:layout_height="383dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/onbocarimage2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description3"
        app:srcCompat="@drawable/onbo_car_img_3" />
</androidx.constraintlayout.widget.ConstraintLayout>